--- a/Tugas Week 2/IFrame/Frame baris.html
+++ b/Tugas Week 2/IFrame/Frame baris.html
@@ -3,7 +3,7 @@
 <body>
  <iframe width="100%" height="700px" 
 src="LatWeek1.html" name="LatWeek1"></iframe>
- <p><a href="https://www.linkedin.com/in/i-wayan-julianta-pradnyana-924741234/" 
+ <p><a href="https://youtube.com" 
 target="LatWeek1">Linkedin.com</a></p>
  <p>Profil Singkat I Wayan Julianta Pradnyana</p>
 </body>
